--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
         If you have KakaoClone Account, login with your email or phone number
       </p>
     </header>
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+      <input
+        name="username"
+        required
+        type="text"
+        placeholder="Email or phone number"
+      />
+      <input name="password" required type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
       <a href="#">Find KakaoClone Account or Password</a>
     </form>
